fixes word break in client profile

--- a/client/stylesheets/imports/_client-profile.less
+++ b/client/stylesheets/imports/_client-profile.less
@@ -1,6 +1,8 @@
 .name-container, .info-container {
   background-color: white;
   padding: 40px;
+  word-break: break-word;
+  word-wrap: break-word;
 
   .clabel {
     .text-uppercase();
